--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.3.0",
     "genkit": "^1.6.2",
+    "lucide-react": "^0.417.0",
     "next": "15.2.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
