--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^11.3.0",
     "genkit": "^1.6.2",
     "lucide-react": "^0.417.0",
+    "mongodb": "^6.8.0",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
