--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.3.0",
+    "firebase-admin": "^12.3.0",
     "genkit": "^1.6.2",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.8.0",
