--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "firebase": "^11.3.0",
     "firebase-admin": "^12.3.0",
     "genkit": "^1.6.2",
+    "googleapis": "^140.0.1",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.8.0",
     "next": "15.2.3",
@@ -59,6 +60,7 @@
     "stripe": "^16.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
