--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "firebase-admin": "^12.3.0",
     "genkit": "^1.6.2",
     "googleapis": "^140.0.1",
+    "libphonenumber-js": "^1.11.4",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.8.0",
     "next": "15.2.3",
@@ -57,6 +58,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
