--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,41 @@
 {
   "name": "Hey Manito!",
-  "short_name": "Hey Manito!",
-  "description": "Asistentes Virtuales IA y Automatización WhatsApp",
+  "short_name": "Hey Manito",
+  "description": "Gestiona asistentes virtuales con IA para WhatsApp.",
   "start_url": "/app",
   "display": "standalone",
-  "background_color": "#111827",
+  "background_color": "#17191C",
   "theme_color": "#8a4fff",
   "icons": [
     {
       "src": "/icon.svg",
       "sizes": "any",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "/apple-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/maskable-icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
