--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,34 +1,34 @@
 {
-    "name": "Hey Manito!",
-    "short_name": "Hey Manito!",
-    "description": "Descubre Hey Manito!, la plataforma líder para crear y gestionar asistentes virtuales con IA. Automatiza tu comunicación por WhatsApp, integra bases de datos y optimiza procesos.",
-    "start_url": "/app",
-    "display": "standalone",
-    "background_color": "#1a1b1e",
-    "theme_color": "#8a4fff",
-    "icons": [
-      {
-        "src": "/icon.svg",
-        "sizes": "any",
-        "type": "image/svg+xml"
-      },
-      {
-        "src": "/android-chrome-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/android-chrome-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/apple-touch-icon.png",
+  "name": "Hey Manito!",
+  "short_name": "Hey Manito!",
+  "description": "La solución definitiva para gestionar tus asistentes de IA de forma inteligente y eficiente.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#191724",
+  "theme_color": "#8a4fff",
+  "icons": [
+    {
+      "src": "icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+        "src": "apple-touch-icon.png",
         "sizes": "180x180",
-        "type": "image/png",
-        "purpose": "any"
-      }
-    ]
+        "type": "image/png"
+    }
+  ]
 }
+
+    
