--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@genkit-ai/googleai": "^1.6.2",
     "@genkit-ai/next": "^1.6.2",
     "@hookform/resolvers": "^4.1.3",
+    "@mercadopago/sdk-react": "^0.0.19",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -48,6 +49,7 @@
     "googleapis": "^140.0.1",
     "libphonenumber-js": "^1.11.4",
     "lucide-react": "^0.417.0",
+    "mercadopago": "^2.0.11",
     "mongodb": "^6.8.0",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
