--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,34 +1,22 @@
 {
   "name": "Hey Manito!",
-  "short_name": "Hey Manito!",
-  "description": "La solución definitiva para gestionar tus asistentes de IA de forma inteligente y eficiente.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#191724",
-  "theme_color": "#8a4fff",
+  "short_name": "HeyManito",
+  "description": "Crea y gestiona asistentes virtuales con IA para automatizar tu comunicación por WhatsApp.",
   "icons": [
     {
-      "src": "icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "android-chrome-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "android-chrome-512x512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-        "src": "apple-touch-icon.png",
-        "sizes": "180x180",
-        "type": "image/png"
+      "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#8a4fff",
+  "background_color": "#1a1a1a",
+  "start_url": "/dashboard",
+  "display": "standalone",
+  "orientation": "portrait"
 }
-
-    
