--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,25 @@
+
 {
   "name": "Hey Manito!",
   "short_name": "HeyManito",
-  "description": "Crea y gestiona asistentes virtuales con IA para automatizar tu comunicación por WhatsApp.",
+  "description": "Crea Asistentes de IA para WhatsApp. Automatiza conversaciones, gestiona datos y optimiza tus procesos de negocio.",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/icon.svg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/icon.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ],
-  "theme_color": "#8a4fff",
-  "background_color": "#1a1a1a",
-  "start_url": "/dashboard",
+  "theme_color": "#220a3b",
+  "background_color": "#0f0f1b",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
 }
