--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,22 @@
 
 {
   "name": "Hey Manito!",
-  "short_name": "HeyManito",
-  "description": "Crea Asistentes de IA para WhatsApp. Automatiza conversaciones, gestiona datos y optimiza tus procesos de negocio.",
+  "short_name": "Hey Manito",
+  "description": "Crea y gestiona asistentes virtuales con IA para automatizar tu comunicación por WhatsApp.",
   "icons": [
     {
-      "src": "/icon.svg",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/icon.svg",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
-  "theme_color": "#220a3b",
-  "background_color": "#0f0f1b",
+  "theme_color": "#8a4fff",
+  "background_color": "#18181b",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
