--- a/src/package.json
+++ b/src/package.json
@@ -42,7 +42,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "firebase": "11.12.0",
+    "firebase": "^10.12.2",
     "genkit": "^1.6.2",
     "googleapis": "^140.0.1",
     "libphonenumber-js": "^1.11.4",
