--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
+
 {
   "name": "Hey Manito!",
-  "short_name": "HeyManito",
-  "description": "Crea y gestiona asistentes virtuales con IA para automatizar tu comunicación por WhatsApp.",
+  "short_name": "Hey Manito!",
+  "description": "Crea Asistentes de IA para WhatsApp y automatiza tu negocio.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#8a4fff",
+  "background_color": "#111827",
   "theme_color": "#8a4fff",
   "icons": [
     {
@@ -16,6 +17,11 @@
       "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ]
 }
