--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,12 @@
 {
+  "theme_color": "#8a4fff",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "name": "Hey Manito!",
   "short_name": "Hey Manito!",
-  "description": "Crea y gestiona asistentes de IA para WhatsApp.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#2c2a27",
-  "theme_color": "#8a4fff",
+  "description": "Crea y gestiona asistentes virtuales con IA para automatizar tu comunicaci\u00f3n por WhatsApp.",
   "icons": [
     {
       "src": "/icon-192x192.png",
@@ -13,14 +14,20 @@
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
