--- a/public/manifest-dashboard.json
+++ b/public/manifest-dashboard.json
@@ -1,20 +1,20 @@
 
 {
     "name": "Hey Manito Dev",
-    "short_name": "HeyManito Dev",
-    "description": "Panel de control para crear y gestionar tus asistentes de IA en Hey Manito.",
+    "short_name": "Hey Manito",
+    "description": "Panel de control para gestionar tus asistentes de IA de Hey Manito.",
     "start_url": "/dashboard",
     "display": "standalone",
-    "background_color": "#18181b",
+    "background_color": "#8a4fff",
     "theme_color": "#8a4fff",
     "icons": [
         {
-            "src": "/icons/icon-dev-192x192.png",
+            "src": "/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icons/icon-dev-512x512.png",
+            "src": "/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
