--- a/public/manifest-chat.json
+++ b/public/manifest-chat.json
@@ -1,22 +1,21 @@
-
 {
-    "name": "Hey Manito Chat",
-    "short_name": "Hey Manito",
-    "description": "Chatea con tus asistentes inteligentes de IA de Hey Manito.",
-    "start_url": "/chat",
-    "display": "standalone",
-    "background_color": "#25D366",
-    "theme_color": "#25D366",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Hey Manito Chat",
+  "short_name": "Chat",
+  "description": "App de chat para Hey Manito.",
+  "start_url": "/chat",
+  "display": "standalone",
+  "background_color": "#25D366",
+  "theme_color": "#25D366",
+  "icons": [
+    {
+      "src": "/icon-chat-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-chat-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
