--- a/public/manifest-dashboard.json
+++ b/public/manifest-dashboard.json
@@ -1,22 +1,21 @@
-
 {
-    "name": "Hey Manito Dev",
-    "short_name": "Hey Manito",
-    "description": "Panel de control para gestionar tus asistentes de IA de Hey Manito.",
-    "start_url": "/dashboard",
-    "display": "standalone",
-    "background_color": "#8a4fff",
-    "theme_color": "#8a4fff",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Hey Manito Dev",
+  "short_name": "Hey Manito",
+  "description": "Panel de control para tus asistentes de IA.",
+  "start_url": "/dashboard",
+  "display": "standalone",
+  "background_color": "#8a4fff",
+  "theme_color": "#8a4fff",
+  "icons": [
+    {
+      "src": "/icon-dev-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-dev-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
