--- a/public/manifest-chat.json
+++ b/public/manifest-chat.json
@@ -1,21 +1,24 @@
 {
-  "name": "Hey Manito Chat",
-  "short_name": "Chat",
-  "description": "App de chat para Hey Manito.",
-  "start_url": "/chat",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "display": "standalone",
-  "background_color": "#25D366",
-  "theme_color": "#25D366",
+  "scope": "/chat/",
+  "start_url": "/chat/",
+  "name": "Hey Manito Chat",
+  "short_name": "Hey Manito Chat",
+  "description": "Tu aplicación de chat para comunicarte con tus asistentes de IA.",
   "icons": [
-    {
-      "src": "/icon-chat-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-chat-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+      {
+          "src": "/icon-chat-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any maskable"
+      },
+      {
+          "src": "/icon-chat-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "any maskable"
+      }
   ]
 }
