--- a/public/manifest-chat.json
+++ b/public/manifest-chat.json
@@ -1,24 +1,21 @@
 {
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "scope": "/chat/",
-  "start_url": "/chat/",
   "name": "Hey Manito Chat",
-  "short_name": "Hey Manito Chat",
-  "description": "Tu aplicación de chat para comunicarte con tus asistentes de IA.",
+  "short_name": "Chat",
+  "description": "Chatea con tus asistentes de IA de Hey Manito.",
+  "start_url": "/chat",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#008069",
   "icons": [
-      {
-          "src": "/icon-chat-192x192.png",
-          "sizes": "192x192",
-          "type": "image/png",
-          "purpose": "any maskable"
-      },
-      {
-          "src": "/icon-chat-512x512.png",
-          "sizes": "512x512",
-          "type": "image/png",
-          "purpose": "any maskable"
-      }
+    {
+      "src": "/icon-chat-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-chat-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
