--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "15.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -70,6 +71,7 @@
     "@ducanh2912/next-pwa": "^10.2.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/web-push": "^3.6.3",
@@ -79,3 +81,5 @@
     "typescript": "^5"
   }
 }
+
+    
