--- a/public/manifest-chat.json
+++ b/public/manifest-chat.json
@@ -1,21 +1,22 @@
+
 {
-  "name": "Hey Manito! Chat",
-  "short_name": "HeyManito Chat",
-  "description": "Chatea con tus asistentes o inicia nuevas conversaciones.",
-  "start_url": "/chat",
-  "display": "standalone",
-  "background_color": "#0d1117",
-  "theme_color": "#008069",
-  "icons": [
-    {
-      "src": "/icon-dev-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-dev-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "Hey Manito Chat",
+    "short_name": "Hey Manito",
+    "description": "Chatea con tus asistentes inteligentes de Hey Manito.",
+    "start_url": "/chat",
+    "display": "standalone",
+    "background_color": "#0d1117",
+    "theme_color": "#25d366",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
