--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongodb": "^6.8.0",
     "next": "15.2.3",
     "next-auth": "^4.24.7",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
