--- a/src/package.json
+++ b/src/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "10.12.3",
+    "framer-motion": "^11.3.11",
     "genkit": "^1.6.2",
     "googleapis": "^140.0.1",
     "libphonenumber-js": "^1.11.4",
@@ -54,7 +55,9 @@
     "mongodb": "^6.8.0",
     "next": "15.2.3",
     "next-auth": "^4.24.7",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -67,9 +70,11 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@ducanh2912/next-pwa": "^10.2.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/web-push": "^3.6.3",
