--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -50,7 +49,6 @@
     "genkit": "^1.6.2",
     "googleapis": "^140.0.1",
     "libphonenumber-js": "^1.11.4",
-    "lucide-react": "^0.417.0",
     "mercadopago": "^2.0.11",
     "mongodb": "^6.8.0",
     "next": "15.2.3",
@@ -64,6 +62,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
