--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "genkit": "^1.6.2",
     "googleapis": "^140.0.1",
     "libphonenumber-js": "^1.11.4",
+    "lucide-react": "^0.414.0",
     "mercadopago": "^2.0.11",
     "mongodb": "^6.8.0",
     "next": "15.2.3",
