--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^11.3.11",
     "genkit": "^1.6.2",
     "googleapis": "^140.0.1",
+    "jsqr": "^1.4.0",
     "libphonenumber-js": "^1.11.4",
     "lucide-react": "^0.414.0",
     "mercadopago": "^2.0.11",
@@ -63,6 +64,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.4.3",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
