--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "livekit-server-sdk": "^2.1.2",
+    "@livekit/components-react": "^2.0.0",
+    "livekit-client": "^2.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
