--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
+    "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -80,6 +81,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/web-push": "^3.6.3",
